<resources>
    <string name="app_name">Fitness Locator</string>
    <string name="sidebar_open">Open Sidebar</string>
    <string name="sidebar_close">Close Sidebar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="API_KEY">AIzaSyDShwON84NuGElge1DprQT1hU23XA_zJoQ</string>
</resources>
